[package]
name = "codec"
version = "0.1.0"
authors = ["xuty <xty50337@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "master"
dependencies = ["libyuv"]

[dependencies]
env-libvpx-sys = "5"
num_cpus = "1.13"
openh264-sys = { git = "https://github.com/OpenRAS/rust-openh264-sys.git" }

[build-dependencies]
vcpkg = "0.2.15"
